@@ -69,14 +69,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version>
-                
-                <!--
                 <configuration>
-                    <forkCount>0</forkCount>
+                    <argLine>@{argLine} -Xmx2g -Djava.awt.headless=true</argLine>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
                 </configuration>
-                -->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
